# spafe

./: .buildinfo  .coverage  .coveralls.yml  .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DomFreqs.py  FundFreqs.py  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  Signal.py  SpectralProperties.py  api_documentation.html  genindex.html  index.html  lpc.py  meta.yaml  objects.inv  package.json  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  test_fbanks.py  test_features.py
_modules/: index.html
_sources/: index.rst.txt
_static/: documentation_options.js  switcher.json
cython_accelerations/: .buildinfo  changelog.html  genindex.html  index.html  installation.html  introduction.html  py-modindex.html  search.html  searchindex.js
dev/: .buildinfo  api.html  exp.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html
docs/: requirements.txt
drafts/: DomFreqs.py  ceps.py  cqt.py  doodles.py  functions.py  lsp.py  mfcc  mfccx.py  plp.py  proc.py  pt.py  signal.py  spfeats.py  stft.py  test_features.pyold
examples/: examples.md  fbanks_bark_example.ipynb  fbanks_gamma_example.ipynb  fbanks_linear_example.ipynb  fbanks_mel_example.ipynb
fbanks/: _fbanks.html  bark_fbanks-1.py  bark_fbanks.html  gammatone_fbanks.html  linear_fbanks.html  mel_fbanks-2.py  mel_fbanks.html
features/: _features.html  bfcc-1.py  bfcc.html  cqcc-1.py  cqcc.html  gfcc-1.py  gfcc-2.py  gfcc.html  lfcc-1.py  lfcc-2.py  lfcc.html  lpc-1.py  lpc-2.py  lpc.html  mfcc-1.py  (+13 more)
(+921 files in other folders)
