[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "spafe"
description-file = "README.md"
author = "SuperKogito"
author-email = "superkogito@gmail.com"
home-page = "https://spafe.readthedocs.io/en/latest/"
classifiers  = [
                'Development Status :: 3 - Alpha',
                'Environment :: Console',
                'Environment :: Web Environment',
                'Intended Audience :: Developers',
                'License :: OSI Approved :: BSD License',
                'Operating System :: OS Independent',
                'Programming Language :: Python',
                'Topic :: Documentation',
                'Topic :: Utilities',
              ]
requires-python = ">=3.5"
requires = ["numpy>=1.17.2", "scipy>=1.3.1"]
